--- a/web_tokenizer.html
+++ b/web_tokenizer.html
@@ -80,15 +80,43 @@
             background-color: #eff6ff;
         }
 
+        /* --- ADDED: Initial load hint styling --- */
+        .load-hint {
+            margin-top: 12px;
+            font-size: 0.8rem;
+            color: #4b5563;
+            text-align: left;
+            background-color: #f9fafb;
+            border-radius: 8px;
+            padding: 10px 12px;
+        }
+
+        .load-hint code {
+            background: #e5e7eb;
+            padding: 1px 4px;
+            border-radius: 4px;
+            font-family: var(--mono-font);
+            font-size: 0.8rem;
+        }
+
+        .load-hint a {
+            color: var(--accent-color);
+            text-decoration: none;
+            word-break: break-all;
+        }
+
+        .load-hint a:hover {
+            text-decoration: underline;
+        }
+
         /* --- MAIN LAYOUT --- */
         #app-container {
             display: none;
             height: 100vh;
-            width: 100vw;
+            width: 100vw;        /* Fill full available width */
             flex-direction: column;
             padding: 20px;
-            max-width: 1400px;
-            margin: 0 auto;
+            /* REMOVED max-width & centering so the app uses the entire screen width */
             gap: 20px;
         }
 
@@ -462,6 +490,14 @@
                 <div style="font-weight: 500; color: #374151;">Drop 'o200k_base.json' here</div>
                 <div style="font-size: 0.85rem; color: #9ca3af; margin-top: 5px;">or click to browse</div>
                 <input type="file" id="json-upload" accept=".json" style="display:none;">
+            </div>
+
+            <!-- ADDED: Initial screen hint for downloading o200k_base.json -->
+            <div class="load-hint">
+                Download <code>o200k_base.json</code> (filesize 2,325,547 bytes) from:<br>
+                <a href="https://tiktoken.pages.dev/js/o200k_base.json" target="_blank" rel="noopener noreferrer">
+                    https://tiktoken.pages.dev/js/o200k_base.json
+                </a>
             </div>
             
             <p id="error-msg" style="color: var(--danger-color); font-size: 0.9rem; min-height: 20px;"></p>
